# blitzar

./: .bazelrc  .clang-format  .gitignore  BUILD  CONTRIBUTING.md  LICENSE  README.md  STYLE.md  WORKSPACE  build.sh  err1.txt  err2.txt  err3.txt  err4.  err4.txt  err5.txt  err6.txt  flake.nix  package.json  shell.nix  t.cc
.cargo/: config.toml
.github/: pull_request_template.md
bazel/: BUILD  bench_profile.sh  cc_archive_action.bzl  cuda_dlink.bzl  cuda_dlink_action.bzl  cuda_test.bzl  fmtlib.BUILD  glibc_version.cpp  sanitize_test.sh  spdlog.BUILD  stacktrace.patch  sxt_benchmark.bzl  sxt_build_system.bzl  sxt_component.bzl
benchmark/: README.md
binary/: BUILD  libproofs-gpu-export-map.ld
bug/: a.out  cmds.txt  cmds_p.txt  t-fatbin.h  t-reg.cubin  t-reg.h  t.fatbin
bug-memory/: .bazelrc  BUILD  WORKSPACE  t.cc
cbindings/: BUILD  backend.cc  backend.h  backend.t.cc  blitzar_api.cc  blitzar_api.h  fixed_pedersen.cc  fixed_pedersen.h  fixed_pedersen.t.cc  get_generators.cc  get_generators.h  get_generators.t.cc  get_one_commit.cc  get_one_commit.h  get_one_commit.t.cc  inner_product.cc  inner_product.t.cc  inner_product_proof.cc  inner_product_proof.t.cc  pedersen.cc  pedersen.h  pedersen.t.cc  proofs_gpu_api.cc  proofs_gpu_api.h  sumcheck.cc  sumcheck.h  sumcheck.t.cc
ci/: build.sh  build2.sh  lsan.supp  lsan_hack.sh
experiment/: BUILD  shared_memory.cc
nix/: bazel.nix  clang-wrapper.nix  clang.nix  clang_driver.patch  compiler_rt.nix  compiler_rt.patch  cuda.nix  cudaX.nix  cuda_host_defines.patch  (+2 more)
rust/blitzar-sys/: Cargo.toml  README.md  build.rs
(+2286 files in other folders)
